<resources>
    <string name="app_name">AndroidFinance</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">loading...</string>
    <string name="action_settings">Settings</string>
    <string name="operation">Operation</string>
    <string name="storage">Storage</string>
    <string name="source">Source</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
